r144: add rideable stub, this time the correct model name various fixes

--- a/cdb/app/views/layouts/main.rhtml
+++ b/cdb/app/views/layouts/main.rhtml
@@ -26,6 +26,7 @@
 ObjectAdmin:
 <%= link_to_if amask(Account::CAN_SET_PERSISTENCY), "PersistentObject", :controller => 'persistent_objects', :action => 'index' %>&nbsp;
 * <%= link_to_if amask(Account::CAN_SET_PERSISTENCY), "SceneDescriptions", :controller => 'scene_descriptions', :action => 'index' %>&nbsp;
+* <%= link_to_if amask(Account::CAN_SEE_RIDEABLES), "Rideables", :controller => 'rideables', :action => 'index' %>&nbsp;
 <br>
 
 Audit:
