--- a/cdb/app/views/stat/time_xp.rhtml
+++ b/cdb/app/views/stat/time_xp.rhtml
@@ -2,7 +2,8 @@
 <form method="post">
 <b>start date</b><br><%= select_date @tstart, :prefix => 'tstart' %><br>
 <b>end date</b><br><%= select_date @tend, :prefix => 'tend' %><br>
-<input type="submit">
+<input type="submit" name="sub" value="Only today">
+<input type="submit" name="sub" value="Show selected timeframe">
 </form>
 
 <table class="timexp" width="100%">
