--- a/cdb/app/views/account/amask.rhtml
+++ b/cdb/app/views/account/amask.rhtml
@@ -4,14 +4,14 @@
 <% else %>
 	<form method="post">
 	<center>
-	<div align="center" style="border: 1px solid black; width: 250px; text-align: left; padding: 2px; margin: 2px;">
+	<div align="center" style="border: 1px solid black; width: 450px; text-align: left; padding: 2px; margin: 2px;">
 	<% Account::amask_a.each {|k| %>
-		<input type="checkbox" name="mask[<%= k %>]" value="<%= 1 %>" <%= @account['amask'].to_i & Account::AMASK[k] > 0 ? "checked" : "" %>>
+		<input type="checkbox" name="mask[<%= k %>]" value="<%= 1 %>" <%= @account['amask'].to_i & Account::AMASK[k] > 0 ? "checked" : "" %> <%= amask(Account::CAN_DO_BACKEND) ? "": " disabled" %>>
 		<%= k %>
 		<br>
 	<% } %>
 </div>
-<input type="submit">
+<% if amask(Account::CAN_DO_BACKEND) %><input type="submit"><% end %>
 </center>
 </form>
 <br>
