r162: loot chains interface chess game interface

--- a/cdb/public/stylesheets/main.css
+++ b/cdb/public/stylesheets/main.css
@@ -2,6 +2,12 @@ body,td {
   font-family: Bitstream Vera Sans, Verdana, Arial, Helvetica, sans-serif;
   font-size: 12px;
 }
+td {
+	background: #fff;
+}
+body {
+	background: #ccf;
+}
 
 a#online { color: #00cc00; font-style: italic; }
 a#dm { color: #00cccc; font-weight: bold; }
