--- a/cdb/app/views/layouts/main.rhtml
+++ b/cdb/app/views/layouts/main.rhtml
@@ -22,6 +22,7 @@
 * <%= link_to_if amask(Account::AMASK_CAN_SEE_ALL_CHARACTERS), "TimeXP", :controller => 'stat', :action => 'time_xp' %>&nbsp;
 * <%= link_to_if amask(Account::CAN_SEE_GV), "Settings", :controller => 'set', :action => 'index' %>
 * <%= link_to_if amask(Account::SEE_ALL_CHARACTERS), "LPH Toplist", :controller => 'stat', :action => 'lph_toplist' %>
+* <%= link_to_if amask(Account::CAN_SEE_LOOT_CHAINS), "Loot Chains", :controller => 'loot_chains', :action => 'index' %>
 <br>
 
 ObjectAdmin:
