--- a/cdb/app/views/loot_chains/_header.rhtml
+++ b/cdb/app/views/loot_chains/_header.rhtml
@@ -1,12 +1,15 @@
 <%= form_tag() if amask(Account::CAN_EDIT_LOOT_CHAINS) %>
-<table>
+<table width="100%">
 <thead>
 <tr>
 	<th>Creature Type</th>
 	<th>ResRef</th>
 	<th>Tag</th>
+	<th>Name</th>
+	<th style="width: 30px;">replace?</th>
 	<th>Loot</th>
-	<th>actions?</th>
+	<th>Chance</th>
+	<th>actions</th>
 </tr>
 </thead>
 <tbody>
