--- a/cdb/app/views/loot_chains/_item.rhtml
+++ b/cdb/app/views/loot_chains/_item.rhtml
@@ -1,19 +1,22 @@
 <tr>
 	<% if amask(Account::CAN_EDIT_LOOT_CHAINS) && loot_helper != nil %>
-	<td><%= loot_helper.text_field :base %></td>
-	<td><%= loot_helper.text_field :resref %></td>
-	<td><%= loot_helper.text_field :tag %></td>
+	<td><%= loot_helper.select("racial_type", RACIAL_TYPES)%></td>
+	<td><%= loot_helper.text_field :resref, :size => 15 %></td>
+	<td><%= loot_helper.text_field :tag, :size => 15 %></td>
+	<td><%= loot_helper.text_field :name, :size => 15 %></td>
 	<td><%= loot_helper.check_box :replace %></td>
-	<td><%= loot_helper.text_field :loot %></td>
+	<td><%= loot_helper.text_field :loot, :size => 15 %></td>
+	<td><%= loot_helper.text_field :chance, :size => 15 %></td>
 	<% else %>
-	<td><%= loot.base %></td>
+	<td><%= RACIAL_TYPES.index(loot.racial_type) %></td>
 	<td><%= loot.resref %></td>
 	<td><%= loot.tag %></td>
+	<td><%= loot.name %></td>
 	<td><%= loot.replace %></td>
 	<td><%= loot.loot %></td>
+	<td><%= "%f" % loot.chance %></td>
 	<% end %>
-	<td><%= link_to_if amask(Account::CAN_EDIT_LOOT_CHAINS), "edit", 
-		:action => 'edit', :id => loot.id %> *
+	<td>
 	<%= link_to_if amask(Account::CAN_EDIT_LOOT_CHAINS), "delete", 
 		:action => 'kill', :id => loot.id %>
 	</td>
