r171: add ajax search

--- a/cdb/app/views/character/_charlistftr.rhtml
+++ b/cdb/app/views/character/_charlistftr.rhtml
@@ -17,7 +17,7 @@
 	<td class="foot">
 	</td>
 	<td class="foot">
-		<%= submit_tag("Update") if form %>
+		<%= submit_tag("Update") if false && form %>
 	</td>
 </tr>
 
