--- a/cdb/app/views/character/_charlisthdr.rhtml
+++ b/cdb/app/views/character/_charlisthdr.rhtml
@@ -1,45 +1,45 @@
 <table class="main">
 <tr>
 	<td class="head">
-		<%= link_to_if showsort, "Name",  :onlineonly => @onlineonly, :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'character' %><br>
+		<%= link_to_if showsort, "Name", :action => 'search', :onlineonly => @onlineonly, :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'character' %><br>
 		Account
 		<%= @order == "desc" ? "&uArr;" : "&dArr;" if @sort == "character"  %>
 	</td>
 	<td class="head">
-		<%= link_to_if showsort, "Rasse", :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'race' %><%= @order == "desc" ? "&uArr;" : "&dArr;" if @sort == "race"  %><br>
+		<%= link_to_if showsort, "Rasse", :action => 'search', :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'race' %><%= @order == "desc" ? "&uArr;" : "&dArr;" if @sort == "race"  %><br>
 		Gesinnung
 		
 	</td>
 	<td class="head">
-		<%= link_to_if showsort, "Gold",  :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'gold' %>
+		<%= link_to_if showsort, "Gold", :action => 'search',  :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'gold' %>
 		<%= @order == "desc" ? "&uArr;" : "&dArr;" if @sort == "gold"  %>
 	</td>
 	<td class="head">
-		<%= link_to_if showsort, "XP",  :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'xp' %>
+		<%= link_to_if showsort, "XP", :action => 'search',  :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'xp' %>
 		<%= @order == "desc" ? "&uArr;" : "&dArr;" if @sort == "xp"  %>
 	</td>
 	<td class="head">
-		<%= link_to_if showsort && nil, "Klassen", :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'level' %>
+		<%= link_to_if showsort && nil, "Klassen", :action => 'search', :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'level' %>
 		<%= @order == "desc" ? "&uArr;" : "&dArr;" if @sort == "level"  %>
 	</td>
 	<td class="head">
 		Key(s)
 	</td>
 	<td class="head">
-		<%= link_to_if showsort, "Letzter Login",  :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'last_login' %>
+		<%= link_to_if showsort, "Letzter Login",  :action => 'search', :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'last_login' %>
 		<%= @order == "desc" ? "&uArr;" : "&dArr;" if @sort == "last_login"  %>
 		<br>
 		Eingeloggt seit
 	</td>
 	<td class="head">
-		<%= link_to_if showsort, "Erstellt am",  :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'create_on' %>
+		<%= link_to_if showsort, "Erstellt am", :action => 'search',  :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'create_on' %>
 		<%= @order == "desc" ? "&uArr;" : "&dArr;" if @sort == "create_on"  %>
 		<br>
-		<%= link_to_if showsort, "Angemeldet am", :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'register_on' %>
+		<%= link_to_if showsort, "Angemeldet am", :action => 'search', :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"), :sort => 'register_on' %>
 		<%= @order == "desc" ? "&uArr;" : "&dArr;" if @sort == "register_on"  %>
 	</td>
 	<td class="head">
-		<%= link_to_if showsort, "Status",  :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"),  :sort => 'status' %>
+		<%= link_to_if showsort, "Status", :action => 'search',  :onlineonly => @onlineonly,  :search => @search, :order => (@order == "desc" ? "asc" : "desc"),  :sort => 'status' %>
 		<%= @order == "desc" ? "&uArr;" : "&dArr;" if @sort == "status"  %>
 	</td>
 </tr>
