--- a/cdb/app/views/layouts/main.rhtml
+++ b/cdb/app/views/layouts/main.rhtml
@@ -4,7 +4,11 @@
   <title>Charakterverwaltung</title>
   <link rel="stylesheet" href="/stylesheets/main.css" type="text/css">
   <link rel="stylesheet" href="/stylesheets/scaffold.css" type="text/css">
-  <%= javascript_include_tag("jquery", "jquery.interface") %>
+  <%= javascript_include_tag("jquery", "jquery.interface.js") %>
+  <%= javascript_include_tag(:defaults) %>
+  <script type="text/javascript">
+	jQuery.noConflict();
+  </script>
 </head>
 <body>
 <table class="main" style="width:100%">
@@ -16,8 +20,7 @@
 
 <%= link_to_if get_user, "Account-Details", :controller => "account", :action => "details" %>&nbsp;
 * <%= link_to_if (get_user && get_user.details?), "<b>Char-Liste</b>", :controller => "character", :action => "index" %>&nbsp;
-
-<%= link_to_if amask(Account::AMASK_CAN_CHANGE_WEATHER), "Weather", :controller => 'weather', :action => 'index' %>&nbsp;
+* <%= link_to_if amask(Account::AMASK_CAN_CHANGE_WEATHER), "Weather", :controller => 'weather', :action => 'index' %>&nbsp;
 * <%= link_to_if amask(Account::AMASK_CAN_SEE_ALL_MENTORS), "MentorData", :controller => 'stat', :action => 'mentor' %>&nbsp;
 * <%= link_to_if amask(Account::AMASK_CAN_SEE_ALL_CHARACTERS), "TimeXP", :controller => 'stat', :action => 'time_xp' %>&nbsp;
 * <%= link_to_if amask(Account::CAN_SEE_GV), "Settings", :controller => 'set', :action => 'index' %>
