--- a/cdb/app/views/loot_chains/_footer.rhtml
+++ b/cdb/app/views/loot_chains/_footer.rhtml
@@ -1,11 +1,11 @@
 <% if amask(Account::CAN_EDIT_LOOT_CHAINS) %>
-	<td><%= select("loot", "racial_type", RACIAL_TYPES.sort{|a,b| a[1] <=>b[1]})%> </td>
-	<td><%= text_field :new, :resref, :size => 15 %></td>
-	<td><%= text_field :new, :tag, :size => 15 %></td>
-	<td><%= text_field :new, :name , :size => 15%></td>
+	<td><%= select("new", "racial_type", RACIAL_TYPES.sort{|a,b| a[1] <=>b[1]})%> </td>
+	<td><%= text_field :new, :resref, :size => 15  %></td>
+	<td><%= text_field :new, :tag, :size => 15  %></td>
+	<td><%= text_field :new, :name, :size => 15 %></td>
 	<td>-</td>
-	<td><%= text_field :new, :loot, :size => 15 %></td>
-	<td><%= text_field :new, :chance, :size => 10 %></td>
+	<td><%= text_field_with_auto_complete :new, :loot, {}, :skip_style => true %></td>
+	<td><%= text_field :new, :chance, :size => 2 %></td>
 	<td><i>fill in to add</i></td>
 <% end %>
 </tbody>
