--- a/cdb/app/views/loot_chains/index.rhtml
+++ b/cdb/app/views/loot_chains/index.rhtml
@@ -15,3 +15,14 @@ end
 %>
 
 <%= render :partial => 'footer' %>
+
+
+<script type="text/javascript">
+// <![CDATA[
+	jQuery(".loot_input").hide();
+	jQuery(".loot_input_trigger").click(function() {
+		jQuery("//div.loot_input").show();
+//		jQuery(this).hide();
+	});
+// ]]>
+</script>
