--- a/cdb/app/views/loot_chains/_footer.rhtml
+++ b/cdb/app/views/loot_chains/_footer.rhtml
@@ -3,9 +3,10 @@
 	<td><%= text_field :new, :resref, :size => 15  %></td>
 	<td><%= text_field :new, :tag, :size => 15  %></td>
 	<td><%= text_field :new, :name, :size => 15 %></td>
-	<td>-</td>
+	<td><%= text_field :new, :order, :size => 2 %></td>
+	<td><%= text_field :new, :replace, :size => 2 %></td>
 	<td><%= text_field_with_auto_complete :new, :loot, {}, :skip_style => true %></td>
-	<td><%= text_field :new, :chance, :size => 2 %></td>
+	<td><%= text_field :new, :chance, :size => 4 %></td>
 	<td><i>fill in to add</i></td>
 <% end %>
 </tbody>
