--- a/cdb/app/views/loot_chains/_header.rhtml
+++ b/cdb/app/views/loot_chains/_header.rhtml
@@ -2,11 +2,12 @@
 <table width="100%">
 <thead>
 <tr>
-	<th>Creature Type</th>
+	<th>RACIAL_TYPE</th>
 	<th>ResRef</th>
 	<th>Tag</th>
 	<th>Name</th>
-	<th style="width: 30px;">replace?</th>
+	<th style="width: 30px;">order</th>
+	<th style="width: 30px;">replace</th>
 	<th>Loot</th>
 	<th>Chance</th>
 	<th>actions</th>
