--- a/cdb/app/views/loot_chains/_item.rhtml
+++ b/cdb/app/views/loot_chains/_item.rhtml
@@ -4,18 +4,25 @@
 	<td><%= loot_helper.text_field :resref,:size => 15 %></td>
 	<td><%= loot_helper.text_field :tag,:size => 15  %></td>
 	<td><%= loot_helper.text_field :name,:size => 15  %></td>
-	<td><%= loot_helper.check_box :replace %></td>
+	<td><%= loot_helper.text_field :order, :size => 2 %></td>
+	<td><%= loot_helper.text_field :replace, :size => 2 %></td>
 	<td>
+		<div class="loot_input">
 		<%= loot_helper.text_field :loot  %>
+		</div>
+		<div class="loot_input_trigger">
+		<small><%= CraftingProduct::RESREFS[loot.loot.split(":",2)[0]] && CraftingProduct::RESREFS[loot.loot.split(":",2)[0]][:name]%><%= ":" + loot.loot.split(":",2)[1] if loot.loot.split(":")[1] %></small>
+		</div>
 	</td>
-	<td><%= loot_helper.text_field :chance, :size => 2%></td>
+	<td><%= loot_helper.text_field :chance, :size => 4%></td>
 	<% else %>
 	<td><%= RACIAL_TYPES.index(loot.racial_type) %></td>
 	<td><%= loot.resref %></td>
 	<td><%= loot.tag %></td>
 	<td><%= loot.name %></td>
+	<td><%= loot.order %></td>
 	<td><%= loot.replace %></td>
-	<td><%= loot.loot %></td>
+	<td><%= CraftingProduct::RESREFS[loot.loot.split(":",2)[0]] && CraftingProduct::RESREFS[loot.loot.split(":",2)[0]][:name]%><%= ":" + loot.loot.split(":",2)[1] if loot.loot.split(":")[1] %><br><small><%= loot.loot %></small></td>
 	<td><%= "%f" % loot.chance %></td>
 	<% end %>
 	<td>
